--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: airtablej
 description: AirTable Flutter HTTP(s) Connection
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/doyle-flutter/airtablej/tree/main
 
 environment:
@@ -32,8 +32,11 @@ flutter:
     # then add platforms following the instruction here:
     # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
     # -------------------
-      some_platform:
-        pluginClass: somePluginClass
+      android:
+        package: com.example.airtablej
+        pluginClass: AirtablejPlugin
+      ios:
+        pluginClass: AirtablejPlugin
     # -------------------
 
   # To add assets to your plugin package, add an assets section, like this:
